@@ -79,7 +79,15 @@ LARS <- function(matX, vecY, lambda1, lambda2, useCholesky = FALSE, testX = NULL
 #' @param intercept An optional boolean switch about an intercept, default is true.
 #' @return A vector with fitted values
 #' @examples
-#'   # tbd
+#' suppressMessages(library(utils))
+#' data("trees", package="datasets")
+#' X <- with(trees, cbind(log(Girth), log(Height)))
+#' y <- with(trees, log(Volume))
+#' lmfit <- lm(y ~ X)
+#' # summary(fitted(lmfit))
+#' mlfit <- linearRegression(X, y)
+#' # summary(mlfit)
+#' all.equal(unname(fitted(lmfit)),  as.vector(mlfit))
 linearRegression <- function(matX, vecY, lambda = 0.0, intercept = TRUE) {
     .Call(`_RcppMLPACK_linearRegression`, matX, vecY, lambda, intercept)
 }
