@@ -1,7 +1,7 @@
-## RcppMLPACK2 [![Build Status](https://travis-ci.org/rcppmlpack/rcppmlpack2.svg)](https://travis-ci.org/rcppmlpack/rcppmlpack2) [![License](http://img.shields.io/badge/license-GPL%20%28%3E=%202%29-brightgreen.svg?style=flat)](http://www.gnu.org/licenses/gpl-2.0.html) 
+## RcppMLPACK2 [![Build Status](https://travis-ci.org/rcppmlpack/rcppmlpack2.svg)](https://travis-ci.org/rcppmlpack/rcppmlpack2) [![License](http://img.shields.io/badge/license-GPL%20%28%3E=%202%29-brightgreen.svg?style=flat)](http://www.gnu.org/licenses/gpl-2.0.html)
 
 
-Rcpp bindings for mlpack 2.*
+Rcpp bindings for mlpack 3.*
 
 ### Experimental
 
@@ -16,10 +16,10 @@ _external_ (system) libraries for [mlpack](http://www.mlpack.org/) instead of bu
 them inside the R package. See below for more detailed installation notes.
 
 Note that the external Boost linkage created issues with the RStudio IDE which also
-uses Boost threading (and then some more Boost) itself. Loading the package will 
+uses Boost threading (and then some more Boost) itself. Loading the package will
 crash an RStudio binary that is older than the daily build version 1.1.129.  The good
 news is than more recent RStudio versions are not affected due to a change in how
-the IDE is built off Boost.  
+the IDE is built off Boost.
 
 ### What is mlpack?
 
@@ -28,7 +28,7 @@ Quoting from the [main page](http://www.mlpack.org/index.html):
 > [mlpack](http://www.mlpack.org/) is a scalable machine learning library, written in C++,
 > that aims to provide fast, extensible implementations of cutting-edge machine learning algorithms.
 > [mlpack](http://www.mlpack.org/) provides these algorithms as simple command-line programs and C++ classes
-> which can then be integrated into larger-scale machine learning solutions. 
+> which can then be integrated into larger-scale machine learning solutions.
 
 and the [about page](http://www.mlpack.org/about.html):
 
@@ -41,11 +41,11 @@ and the [about page](http://www.mlpack.org/about.html):
 >
 > As a result of this approach, mlpack outperforms competing machine learning libraries by large margins; see
 > the [BigLearning workshop paper](http://www.mlpack.org/papers/mlpack2011.pdf) and the
-> [benchmarks](http://www.mlpack.org/benchmark.html) for details. 
+> [benchmarks](http://www.mlpack.org/benchmark.html) for details.
 
 An alphabetical list of currently implemented methods in [mlpack](http://www.mlpack.org/) is shown below,
 see [here](http://www.mlpack.org/about.html) for links to papers, API documentation, tutorials and other
-references: 
+references:
 
 * Collaborative filtering (with many decomposition techniques)
 * Decision stumps (one-level decision trees)
@@ -82,10 +82,10 @@ mlpack library (version 1.*). Thus users do not need to install mlpack itself in
 use RcppMLPACK.
 
 This package, however, uses the external [mlpack](http://www.mlpack.org/) library (version
-2.* or later), so see below for detailed instructions.  
+2.* or later), so see below for detailed instructions.
 
-We have successfully used version 2.1.0 (with a patch, see below), version 2.1.1 and now 
-version 2.2.0.
+We have successfully used version 2.1.0 (with a patch, see below), version 2.1.1,
+version 2.2.0, and now version 3.0.1.
 
 #### Debian
 
@@ -97,12 +97,15 @@ in a stable Debian release).
 
 #### Ubuntu
 
-Unofficial packages for trusty (14.04), xenial (16.04) and yakkety (16.10)
-[are available in Dirk's PPA](https://launchpad.net/~edd/+archive/ubuntu/misc/+packages), and
-used by the
-[Travis CI integration](https://github.com/eddelbuettel/rcppmlpack2/blob/master/.travis.yml).
-They are based on Barak's Debian packages.  Via the standard Debian-to-Ubuntu package
-transition, these should also appear in Ubuntu 17.04 and later.
+Unofficial packages for LTS releases trusty (14.04), xenial (16.04),
+and bionic (18.04)
+[are available in Dirk's PPA](https://launchpad.net/~edd/+archive/ubuntu/misc/+packages),
+and used by the
+[Travis CI integration](https://github.com/eddelbuettel/rcppmlpack2/blob/master/.travis.yml). We
+may also make versions for intermediate releases available as time
+permits.  They are based on Barak's Debian packages.  Via the standard
+Debian-to-Ubuntu package transition, these should also appear in
+upcoming Ubuntu releases.
 
 #### OS X / Brew
 
@@ -120,18 +123,18 @@ You may have to install from source.  Let me know how it goes.
 
 Under mlpack 2.1.0, the `R CMD check` command may complain about `std::cout`. Use
 [this one-line change](https://github.com/eddelbuettel/mlpack/commit/6dd600825395e1bdb0455ad836daefc49b5ca66f)
-which is also part of the mlpack 2.1.1 release. Release 2.1.1 and 2.2.0 are fine.
+which is also part of the mlpack 2.1.1 release. Release 2.1.1, 2.2.0 and later are fine.
 
 ### Authors
 
 [Qiang Kou](https://www.linkedin.com/pub/qiang-kou/2a/986/6b7) for the main
 [RcppMLPACK](https://github.com/thirdwing/RcppMLPACK) package.
 
-[James Balamuta](http://thecoatlessprofessor.com/) for various builds tricks and tests, in particular on OS X.
+[James Balamuta](http://thecoatlessprofessor.com/) for various builds
+tricks and tests, in particular on OS X.
 
 Dirk Eddelbuettel for most of the remainder of this experiment.
 
 ### License
 
 GPL (>= 2)
-
