@@ -1,3 +1,12 @@
+2018-05-30  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/inline.R.in (inlineCxxPlugin): Use OpenMP where available
+
+	* src/linearRegression.cpp: Added example
+	* man/linearRegression.Rd: Idem
+
+	* README.md: Mention mlpack 3.0.1 as well
+
 2018-05-29  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/linearRegression.cpp (linearRegression): Another set of
